# mlpy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pypirc.example  BENCHMARK_RESULTS_SUMMARY.md  BUG_FIXES_SUMMARY.md  CHANGELOG.md  CI_CD_SUMMARY.md  CLAUDE.md  COMANDOS_GITHUB.md  CONTRIBUTING.md  DEMO_EJECUTIVO.md  Dockerfile  EJEMPLOS_README.md  GITHUB_ACTIONS_SETUP.md  GITHUB_READY_CHECKLIST.md  INSTALACION.md  LICENSE  MANIFEST.in  MEDITACION_IA_YOGUICA.md  MEJORAS_MLPY.md  MLOPS_SUMMARY.md  MLPY_GEOSPATIAL_REQUIREMENTS.md  Makefile  PROTOCOLO_MEDITATIVO_IA_UNIVERSAL.md  PYPI_CHECKLIST.md  README.md  README_NEW.md  RESUMEN_CLI_MLPY.md  RESUMEN_FINAL_MLPY.md  RESUMEN_TESTS_MLPY.md  ROADMAP.md  TEST_FIXES_SUMMARY.md  TEST_PLAN.md  TEST_SUMMARY.md  XAI_SUMMARY.md  analyze_benchmark_results.py  benchmark_final_mlpy.py  benchmark_gb_simple.py  benchmark_results_20250817_181823.csv  (+87 more)
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  quality.yml  release.yml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
docs/: ADVANCED_OPERATORS_GUIDE.md  ANALISIS_COMPETENCIA_2024.md  ANALISIS_MODELOS_EXPANSION.md  BIG_DATA_EXAMPLES.md  BIG_DATA_GUIDE.md  CLI_GUIDE.md  DOCUMENTATION_SUMMARY.md  LAZY_EVALUATION_GUIDE.md  NUEVOS_MODELOS_V2.1.md  PERSISTENCE_GUIDE.md  ROADMAP_GAPS_ANALYSIS.md  TESTING_GUIDE.md  creating_wrappers.md  requirements.txt  sklearn_learners.md  sklearn_quick_reference.md
docs/LIBRO_MLPY/: 00_INDICE.md  capitulo_01_introduccion.md
docs/casos_uso/: README.md  retail_prediccion_churn.md
docs/source/: concepts.rst  conf.py  index.rst  installation.rst  quickstart.rst  tgpy_integration.rst
docs/sphinx/: conf.py  index.rst
docs/tutoriales/: 00_INDICE_TUTORIALES.md  tutorial_01_primer_modelo.md
examples/: advanced_pipelines_example.py  api_deployment_example.py  automl_advanced.py  automl_advanced_example.py  automl_demo.py  automl_example.py  automl_notebook.py  benchmark_multimodel_example.py  big_data_airline_example.py  big_data_example.py  big_data_nyc_taxi_example.py  big_data_public_datasets.py  cli_demo.sh  cli_integration.py  complete_ml_workflow.py  dashboard_example.py  diagnose_h2o_issues.py  end_to_end_demo.py  ensemble_demo.py  fase2_integration_example.py  feature_store_example.py  filters_demo.py  gradient_boosting_comparison.py  h2o_benchmark.py  h2o_benchmark_results.md  h2o_benchmark_simple.py  h2o_integration_demo.py  h2o_simple_debug.py  housing_predictor_metrics_demo.json  information_theory_filters_demo.py  iris_sample.csv  lazy_evaluation_example.py  lazy_evaluation_simple.py  lazy_pipeline_example.py  llm_demo.py  ml_workflow_simple.py  mlops_demo.py  mlpy_demo_notebook.ipynb  openml_integration_example.py  optuna_advanced_demo.py  (+17 more)
examples/experiments_demo/: experiments.json
examples/model_versions_demo/: versions.json
examples/notebooks/: 01_getting_started.ipynb  01_getting_started_updated.ipynb  02_automl_example.ipynb  03_advanced_pipelines.ipynb  04_simpleautoml_showcase.ipynb  05_backends_and_bigdata.ipynb  06_visualization_showcase.ipynb
examples/scripts/: basic_classification.py  basic_regression.py  benchmarking.py  (+3 more)
mlpy/: __init__.py  __main__.py  base.py  benchmark.py  benchmark_advanced.py  prediction.py  resample.py
notebooks/: MLPY_Mejoras_Demo.ipynb  README_NOTEBOOK.md  SOLUCION_IMPORT_ERROR.md  extension_meditativa.ipynb  fix_jupyter_import.py  setup_mlpy_jupyter.ipynb  taltal_landslide_susceptibility.ipynb
scripts/: build_package.py
tests/: __init__.py  conftest.py  test_benchmark_advanced.py  test_callbacks.py  test_ci.py  test_interpretability.py  test_lazy_evaluation.py  test_learners_sklearn.py  test_pytorch_integration.py  test_robust_serialization.py  test_spatial_resampling.py  test_spatial_tasks.py  test_tuning_callbacks.py  test_validation_system.py  test_visualizations.py
tgpy-master/: setup.py
(+460 files in other folders)
