[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlpy-geo"
version = "0.1.0"
description = "A Machine Learning Framework for Python inspired by mlr3"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MLPY Contributors"},
]
keywords = ["machine learning", "ml", "data science", "framework", "mlr3"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "typing-extensions>=4.0.0;python_version<'3.10'",
    "click>=8.0.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "pre-commit>=2.20.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "numpydoc>=1.5.0",
]

visualization = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

parallel = [
    "joblib>=1.2.0",
    "ray>=2.0.0",
    "dask[complete]>=2023.1.0",
]

interpretability = [
    "shap>=0.41.0",
    "lime>=0.2.0",
]

arrow = [
    "pyarrow>=10.0.0",
    "polars>=0.19.0",
]

all = [
    "mlpy[dev,visualization,parallel,interpretability,arrow]",
]

[project.scripts]
mlpy = "mlpy.cli.main:cli"

[project.urls]
"Homepage" = "https://github.com/mlpy-project/mlpy"
"Documentation" = "https://mlpy.readthedocs.io"
"Source" = "https://github.com/mlpy-project/mlpy"
"Tracker" = "https://github.com/mlpy-project/mlpy/issues"
"Changelog" = "https://github.com/mlpy-project/mlpy/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["mlpy"]

[tool.setuptools.package-data]
mlpy = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_third_party = ["numpy", "pandas", "sklearn", "pytest"]
known_first_party = ["mlpy"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "sklearn.*",
    "joblib.*",
    "matplotlib.*",
    "seaborn.*",
    "shap.*",
    "lime.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=mlpy",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["mlpy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]